--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCHxTplvhBUxOTpGqhm1ye",
+      "authorship_tag": "ABX9TyNMZ6pB4NJnd0kBg/yw7Cuo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,32 +28,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "data=[[5,200],[2,359],[8,120],[1,23]]\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "scale=MinMaxScaler()\n",
+        "data1=scale.fit_transform(data)\n",
+        "data1"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "07fYVmQqR1mq",
-        "outputId": "cddd8187-e7fe-465f-9ca0-22af33787138"
+        "id": "aRk4U8CpTNuW",
+        "outputId": "0bfadc5e-739d-45ee-9aab-66142e217cca"
       },
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "lalit\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.57142857, 0.52678571],\n",
+              "       [0.14285714, 1.        ],\n",
+              "       [1.        , 0.28869048],\n",
+              "       [0.        , 0.        ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
-      ],
-      "source": [
-        "print('lalit')"
       ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "aRk4U8CpTNuW"
+        "id": "vbiDovoGVvSr"
       },
       "execution_count": null,
       "outputs": []
