--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMZ6pB4NJnd0kBg/yw7Cuo",
+      "authorship_tag": "ABX9TyMOyKtan7lgraV3Cf4wEWRm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,12 +61,135 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "ss=StandardScaler()\n",
+        "data2=ss.fit_transform(data)\n",
+        "data2"
+      ],
       "metadata": {
-        "id": "vbiDovoGVvSr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vbiDovoGVvSr",
+        "outputId": "d98a27b1-f5a7-484d-caf0-39559ee00754"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.36514837,  0.19903411],\n",
+              "       [-0.73029674,  1.4907249 ],\n",
+              "       [ 1.46059349, -0.4508732 ],\n",
+              "       [-1.09544512, -1.23888581]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"encoding:\n",
+        "is a technique of converting categorical variables into numerical values so that it could be easily fitted to a machine leaning model.\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "npH10kWhWdpl",
+        "outputId": "fefd3bc9-791a-492b-9fd6-4916bed1f45e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'encoding:\\nis a technique of converting categorical variables into numerical values so that it could be easily fitted to a machine leaning model.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\"Types of encoding:\n",
+        "One hot encoding: single one is '1' other bits are '0'\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "tsPHFhIYYoS9",
+        "outputId": "29e5fa25-cafd-40a5-c248-892e1eac3a0c"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\"Types of encoding:\\nOne hot encoding: single one is \\'1\\' other bits are \\'0\\'\\n\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "data=['blue','red','yellow','black','blue']\n",
+        "data4=np.array(data)\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "enc=OneHotEncoder()\n",
+        "data3=enc.fit_transform(data4[:,np.newaxis]).toarray()\n",
+        "data3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x5rOz66lZaJt",
+        "outputId": "16363f0e-b867-4b7a-8aa0-0ed52fd8e79a"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 1., 0., 0.],\n",
+              "       [0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 1.],\n",
+              "       [1., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     }
   ]
 }
